# robotframework-reqcov

./: .gitignore  README.md  pyproject.toml
RobotRequirementsCovarege/: __init__.py  coverage_template.py
example/requirements/: requirements.csv
example/test/: TestReq1.robot  TestReq2.robot  TestReq3.robot
